..I might have forgotten about the overflow css rule. On a brighter note, this should be fixed partially. :D

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -27,6 +27,7 @@ body {
     width: auto;
     height: 100%;
     align-self: flex-end;
+    overflow: hidden;
   }
 
   h1 {
@@ -65,5 +66,6 @@ body {
       height: 100%;
       width: 100%;
       justify-self: flex-end;
+      overflow: hidden;
     }
   }
